--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,10 @@
         display: flex;
         justify-content: flex-end; 
     }
+    /* CAROUSEL */
+    .carousel h1{
+        font-family: 'Hanzel';
+    }
     /* CONTACT */
     .contact .contact-right button{
         border: 0.5px black solid;
@@ -12,7 +16,7 @@
         background-color: black;
         color: white;
     }
-
+    /* NEWS */
     .news .news-title {
         padding-bottom: 0;
     }
