--- a/css/custom.css
+++ b/css/custom.css
@@ -111,6 +111,9 @@
     .slogan h2{
         padding-bottom: 1rem;
     }
+    .value .col-3,.value .col-2{
+        padding-top: 0;
+    }
     /* CONTACT */
     .contact{
         width: 100vw;
