--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,10 @@
         "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 @media (min-width: 375px) {
-
+    .navbar {
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+        padding: 1rem 0;
+    }
     /* CONTACT INFOR */
     .contact-information {
         width: 100vw;
