--- a/css/news.css
+++ b/css/news.css
@@ -148,7 +148,23 @@
     /* NEWS */
     .news .blog-col img{
         width: 26rem;
-        height: 13rem;
+        height: 15rem;
+    }
+    .news {
+        margin-top: 1rem;
+    }
+    .news .blog-col a{
+        display: block;
+        height: 4.5rem;
+    }
+}
+/* x<=1680px */
+@media (min-width: 1680px) {
+
+    /* NEWS */
+    .news .blog-col img{
+        width: 30rem;
+        height: 17rem;
     }
     .news {
         margin-top: 1rem;
