--- a/css/custom.css
+++ b/css/custom.css
@@ -23,6 +23,10 @@
     .news .news-content a:hover{
         font-weight: 700;
     }
+    /* footer */
+    footer .copyright{
+        text-decoration: none;
+    }
 /* <= 375px */
 @media (max-width: 375px){
     *{
